<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostsAndTasks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/userContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="visible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"

                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:visibility="visible"
                app:srcCompat="?attr/actionModeCloseDrawable" />

        </LinearLayout>

        <TextView
            android:id="@+id/taskView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/tasks"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <TextView
                android:id="@+id/completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/completed"
                android:textAlignment="viewEnd"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />
        </LinearLayout>

        <ListView
            android:id="@+id/taskList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"/>

        <TextView
            android:id="@+id/postView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/posts"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ListView
            android:id="@+id/postList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>